moved 7.0 and 7.2 pages + folders to previous_releases, no errors while building

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v7.x.x/7.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v7.x.x/7.0.md
@@ -37,7 +37,7 @@ MD5 (ipfabric-7-0-15+0.vhdx.zst) = 55f56971c0d1c4a9cc1b9ab54b43e1d3
 - Resolved various proxy-related issues.
 - Addressed multiple issues affecting the upgrade process.
 - Fixed problems causing failures in techsupport generation.
-- Juniper devices with large IPv6 routing tables were not following the [BGP Threshold function](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md), resulting in the unnecessary downloading of BGP routes. This issue led to an increased snapshot size and caused discovery-related problems.
+- Juniper devices with large IPv6 routing tables were not following the [BGP Threshold function](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md), resulting in the unnecessary downloading of BGP routes. This issue led to an increased snapshot size and caused discovery-related problems.
 
 
 ## v7.0.13 (February 11th, 2025; GA)
@@ -45,7 +45,7 @@ MD5 (ipfabric-7-0-15+0.vhdx.zst) = 55f56971c0d1c4a9cc1b9ab54b43e1d3
 ### Fixes
 
 - After system reboots, the bandwidth limit sporadically reset to 1 Mb/s and could not be reconfigured.
-- The [BGP Threshold function](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md) did not work as expected. When the function was disabled, routes were not being downloaded, even though no limit should have been applied.
+- The [BGP Threshold function](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md) did not work as expected. When the function was disabled, routes were not being downloaded, even though no limit should have been applied.
 
 ## v7.0.11 (January 21st, 2025; EA)
 
@@ -57,7 +57,7 @@ MD5 (ipfabric-7-0-15+0.vhdx.zst) = 55f56971c0d1c4a9cc1b9ab54b43e1d3
 
   !!! Warning "Don't forget to update IAM policy"
 
-      In order to collect AWS Network Load Balancers, respective IAM policy has to be updated. You can download the new policy [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_7.0.json).
+      In order to collect AWS Network Load Balancers, respective IAM policy has to be updated. You can download the new policy [here](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_7.0.json).
       The only difference from the previous policy is a new statement allowing all `Describe*` API endpoints in the `elasticloadbalancing` service:
       ```
       {
@@ -85,7 +85,7 @@ staticClients:
       - "https://<YOUR_IPF_INSTANCE_URL>/api/oauth2/external/<SSO_PROVIDER_NAME>"
 ```
 
-For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#static-clients). If you would like assistance, please contact your Solution Architect or Support Team.
+For more information, please refer to the [SSO documentation](../../../../IP_Fabric_Settings/administration/sso.md#static-clients). If you would like assistance, please contact your Solution Architect or Support Team.
 
 ### New Upgrade Process
 
@@ -93,7 +93,7 @@ IP Fabric version `6.10` introduced a new upgrade portal for streamlined upgrade
 
 The new upgrade portal can be accessed via the following URL: `https://<YOUR_IPF_INSTANCE_URL_OR_IP>/ipf-system-upgrade/` or through System Administration interface on port `8443`.
 
-![Upgrade options](previous_releases/IP_Fabric_v6.x.x/6.10_upgrade_options.png)
+![Upgrade options](../IP_Fabric_v6.x.x/6.10_upgrade_options.png)
 
 #### Upgrade to `7.x` Based Version
 
@@ -103,18 +103,18 @@ upgrade service.
 This service requires re-authentication with `osadmin` account, even if you are
 already logged in the System Administration interface.
 
-![Authentication for 7.x upgrades](previous_releases/IP_Fabric_v6.x.x/6.10_authenticate_for_7x_upgrades.jpg)
+![Authentication for 7.x upgrades](../IP_Fabric_v6.x.x/6.10_authenticate_for_7x_upgrades.jpg)
 
 After successful authentication, the new upgrade interface appears, providing
 two options:
 
-- Option 1: [Offline Update](../../System_Administration/system_update.md#offline-update) is used for environments with restricted internet access.
+- Option 1: [Offline Update](../../../../System_Administration/system_update.md#offline-update) is used for environments with restricted internet access.
 It allows for the manual downloading of update files and performing the upgrade without an active internet connection.
 
-- Option 2: [Online Update](../../System_Administration/system_update.md#online-update) requires internet connectivity or a connection to IP Fabric
+- Option 2: [Online Update](../../../../System_Administration/system_update.md#online-update) requires internet connectivity or a connection to IP Fabric
 servers. It automates the process of checking for and applying updates directly from the IP Fabric interface.
 
-![Steps to upgrade system to 7.x](previous_releases/IP_Fabric_v6.x.x/6.10_upgrades_to_7x_steps.png)
+![Steps to upgrade system to 7.x](../IP_Fabric_v6.x.x/6.10_upgrades_to_7x_steps.png)
 
 The new upgrade service operates on port `443`, so no additional firewall ports
 need to be opened.
@@ -122,9 +122,9 @@ need to be opened.
 During the upgrade, the service displays the progress, and once the upgrade is
 complete, the appliance will reboot automatically.
 
-![Progress bar of the upgrade](previous_releases/IP_Fabric_v6.x.x/6.10_progress_bar_of_upgrade.png)
+![Progress bar of the upgrade](../IP_Fabric_v6.x.x/6.10_progress_bar_of_upgrade.png)
 
-For more information, see full description in [6.10 release notes](previous_releases/IP_Fabric_v6.x.x/6.10.md).
+For more information, see full description in [6.10 release notes](../IP_Fabric_v6.x.x/6.10.md).
 
 ### New Features
 
@@ -132,7 +132,7 @@ For more information, see full description in [6.10 release notes](previous_rele
 
 In the 7.0 release, we're introducing Extensions, a new feature that allows users to add and customize their IP Fabric instance with a tailored functionality.
 
-The feature is described in details at [Extensions Guide](../../IP_Fabric_GUI/extensions.md)
+The feature is described in details at [Extensions Guide](../../../../IP_Fabric_GUI/extensions.md)
 
 #### GUI
 
@@ -142,14 +142,15 @@ The feature is described in details at [Extensions Guide](../../IP_Fabric_GUI/ex
 
       Since this data is displayed while still being processed, it may be incomplete.
 
-- **Shareable Snapshot and Tables** -- Easily share specific [snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot), and [tables (including a snapshot ID and full filter representation)](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views) with your team using shareable links in the GUI.
+- **Shareable Snapshot and Tables** -- Easily share specific [snapshot](../../../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot),
+  and [tables (including a snapshot ID and full filter representation)](../../../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views) with your team using shareable links in the GUI.
 
   - Added support for [URL links that point to a specific
-    snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
+    snapshot](../../../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
   - Links to tables can now be shared [with a snapshot ID and full filter
-    representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
+    representation](../../../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
 
-- **Discovery force stop** -- A new **[Force Stop](../../IP_Fabric_GUI/discovery_snapshot.md#force-stopping-discovery)** button has been added next to the **Stop** button for immediate discovery termination.
+- **Discovery force stop** -- A new **[Force Stop](../../../../IP_Fabric_GUI/discovery_snapshot.md#force-stopping-discovery)** button has been added next to the **Stop** button for immediate discovery termination.
 
   - API endpoint `/jobs/{key}/force-stop`
 
@@ -159,11 +160,11 @@ The feature is described in details at [Extensions Guide](../../IP_Fabric_GUI/ex
 
         To ensure UI access is maintained after a discovery **Force Stop**, any system jobs scheduled to start afterward will be cancelled.
 
-- **Pinnable Pages in the Technology Tables** -- Each page in the **Technology Tables** can be pinned to the main menu under the **Technology** section, see [Pin Pages to the Main Menu for Quick Access](../../IP_Fabric_GUI/technology_tables/index.md#pin-pages-to-the-main-menu-for-quick-access).
+- **Pinnable Pages in the Technology Tables** -- Each page in the **Technology Tables** can be pinned to the main menu under the **Technology** section, see [Pin Pages to the Main Menu for Quick Access](../../../../IP_Fabric_GUI/technology_tables/index.md#pin-pages-to-the-main-menu-for-quick-access).
 - **Dashboard with Multiple Views** -- You can now create multiple views on your Dashboard fitting your needs. Just add a new tab panel, give it a name and select desired widgets.
 - **IPv4 Managed IP Summary table** -- A new table providing an overview of sites and all their IPv4 subnets. For each subnet, it provides an information about its gateways, count of users and total counts of different VLAN IDs and VRF names. This new table is going to replace two existing technology tables -- `Managed Networks` and `Gateway redundancy` tables -- which are deprecated now and will be removed in the next major IPF release. Unlike the existing tables, the new table provides information about all subnets regardless of the devices where they are configured.
 
-For more information, please refer to the [IPv4 Managed IP Summary table documentation](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
+For more information, please refer to the [IPv4 Managed IP Summary table documentation](../../../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
 
 #### Cloud
 
@@ -205,7 +206,7 @@ For more information, please refer to the [IPv4 Managed IP Summary table documen
 
 #### Network Discovery
 
-- **New Capabilities -- Check Point** -- The ability to collect Enforcement Point data using a new extended command, allowing access to expert mode when explicitly defined. See [Checkpoint Known Issues](../../support/known_issues/Vendors/checkpoint.md#identity-awareness-support).
+- **New Capabilities -- Check Point** -- The ability to collect Enforcement Point data using a new extended command, allowing access to expert mode when explicitly defined. See [Checkpoint Known Issues](../../../../support/known_issues/Vendors/checkpoint.md#identity-awareness-support).
 
 - **New Capabilities -- Palo Alto** -- The ability to collect information on LSVPN (Large Scale VPN) endpoint information. New tables:
 
@@ -221,11 +222,11 @@ For more information, please refer to the [IPv4 Managed IP Summary table documen
 
 - **New Vendor -- GoogleCloud Platform:**
 
-  - Possibility to [configure GoogleCloud Platform API discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/GCP_Google_Cloud_Platform.md) is now available in the GUI, without need to enable feature flag (`ENABLE_DISCOVERY_DEVICES_GCP`).
+  - Possibility to [configure GoogleCloud Platform API discovery](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/GCP_Google_Cloud_Platform.md) is now available in the GUI, without need to enable feature flag (`ENABLE_DISCOVERY_DEVICES_GCP`).
   - Support for Load Balancer discovery has been added.
 
 - **Duplicate IP Discovery** -- The ability to discover duplicate IP addresses in the same network can now be allowed explicitly [in the
-  GUI](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md).
+  GUI](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md).
 
   !!! important
 
@@ -236,7 +237,7 @@ For more information, please refer to the [IPv4 Managed IP Summary table documen
 #### Diagrams
 
 - **Added Media to xDP line cap labels** -- you can now configure diagrams to show Media information as a line cap label for xDP links.
-- **Visio Export** -- An "Export to VSDX" button has been added to the [Diagrams toolbar](../../IP_Fabric_GUI/diagrams/network_viewer.md#export-current-view-to-svgpngvsdx). This feature allows diagrams to be exported as `.vsdx` files, which can be opened in Visio.
+- **Visio Export** -- An "Export to VSDX" button has been added to the [Diagrams toolbar](../../../../IP_Fabric_GUI/diagrams/network_viewer.md#export-current-view-to-svgpngvsdx). This feature allows diagrams to be exported as `.vsdx` files, which can be opened in Visio.
 
   !!! Info "NOT Supported"
 
@@ -273,10 +274,10 @@ For more information, please refer to the [IPv4 Managed IP Summary table documen
 ### Improvements
 
 - **Device-Based Advanced Filters** -- Filter tables based on device properties such as `Vendor`, `Family`, `Model`, and `Version`.
-  - For a full list of properties, see [Technology Tables -- Device-Based Advanced Filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
+  - For a full list of properties, see [Technology Tables -- Device-Based Advanced Filters](../../../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
 - **Server Overload Detection** -- We've enhanced the overload detection for all HTTP-based vendor API clients. Now, if an overloaded server message is received, the system pauses for a specified duration before retrying.
 - **Site Separation Automatic Site Name Identification** -- Enhanced the option to build advanced Site Name values using RegEx template strings. See [Site
-  Separation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/site_separation.md).
+  Separation](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/site_separation.md).
 
 - **Format Change for Techsupport Files** -- Techsupport files are now compressed with `zstd` (instead of `gzip`) for improved speed and compression ratio.
 
@@ -292,7 +293,8 @@ For more information, please refer to the [IPv4 Managed IP Summary table documen
 
 ### API Changes
 
-Several API endpoints have been updated or removed in this major release. This could result in breaking your automation and system workflows. Please consult your Operations or DevOps team to double-check if you use these endpoints.
+Several API endpoints have been updated or removed in this major release. This could result in breaking your automation and system workflows.
+Please consult your Operations or DevOps team to double-check if you use these endpoints.
 
 #### Replaced Endpoints
 
@@ -374,10 +376,10 @@ Along with other new features and tables mentioned in this release note the foll
 
 System administration UI on port `8443` will be removed in the near future. In version `7.0`, we are introducing replacements for its functionality.
 
-* [System Status](../../IP_Fabric_GUI/tips/system_status.md)
-* [Backup and Maintenance](../../System_Administration/Command_Line_Interface/How_to/backup_restore_CLI.md)
-* [System Update](../../System_Administration/system_update.md)
-* [Restore Admin Access](../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
+* [System Status](../../../../IP_Fabric_GUI/tips/system_status.md)
+* [Backup and Maintenance](../../../../System_Administration/Command_Line_Interface/How_to/backup_restore_CLI.md)
+* [System Update](../../../../System_Administration/system_update.md)
+* [Restore Admin Access](../../../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
 
 ### Intent Rules
 
