--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v7.x.x/7.2.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v7.x.x/7.2.md
@@ -152,17 +152,17 @@ The below API endpoints have been marked as deprecated and the intention is to r
 
 The System Administration UI on port `8443` has been deprecated in version `7.0` and is no longer accessible. All its functionalities have been replaced by an alternative:
 
-* [System Status](../../IP_Fabric_GUI/tips/system_status.md)
-* [Backup and Maintenance](../../System_Administration/Command_Line_Interface/How_to/backup_restore_CLI.md)
-* [System Update](../../System_Administration/system_update.md)
-* [Restore Admin Access](../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
+* [System Status](../../../../IP_Fabric_GUI/tips/system_status.md)
+* [Backup and Maintenance](../../../../System_Administration/Command_Line_Interface/How_to/backup_restore_CLI.md)
+* [System Update](../../../../System_Administration/system_update.md)
+* [Restore Admin Access](../../../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
 
 ### RBAC Fixes
 
 After reviewing our built-in RBAC policies, we have made the following changes. This is to ensure that the policies
 are more consistent with the intended use cases. If your roles require access to these endpoints, please create a
-[custom RBAC policy](../../IP_Fabric_Settings/administration/policies.md) and assign it to the 
-[required role(s)](../../IP_Fabric_Settings/administration/roles.md).
+[custom RBAC policy](../../../../IP_Fabric_Settings/administration/policies.md) and assign it to the 
+[required role(s)](../../../../IP_Fabric_Settings/administration/roles.md).
 
 These policies have been removed from the built-in `others` (ID of `read`) and moved to `settings`:
 
@@ -187,7 +187,8 @@ These policies have been removed from the built-in `others` (ID of `read`) and m
 
 ### Layout Optimization for Large Circular Graphs
 
-Circular graphs with over 100 nodes experienced slow rendering and oversized layouts due to complex line-crossing minimization calculations. This also impacted snapshot discovery/loading performance due to prolonged node position caching.
+Circular graphs with over 100 nodes experienced slow rendering and oversized layouts due to complex line-crossing minimization calculations.
+This also impacted snapshot discovery/loading performance due to prolonged node position caching.
 
 For graphs exceeding 100 nodes, we now automatically apply the **universal layout** instead of the circular layout. This ensures:
 
@@ -202,14 +203,7 @@ The layout type change (circular --> universal) is not yet reflected in API resp
 #### Configuration Import/Export
 
 - We have developed a new feature that allows you to import and export configurations of the IP Fabric application across multiple IP Fabric instances.
-  More details can be found on the [Configuration Import/Export](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) page.
-
-#### Automated SSO
-
-- We have developed a new script to simplify the SSO setup process for the IP
-  Fabric application. More details can be found on the
-  [Automated Single Sign-On (SSO)](../../IP_Fabric_Settings/administration/sso.md/#automated-sso-enablement-for-the-ipf-application)
-  page.
+  More details can be found on the [Configuration Import/Export](../../../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) page.
 
 #### Azure Network Load Balancers (NLB) support
 
@@ -218,23 +212,24 @@ The layout type change (circular --> universal) is not yet reflected in API resp
   !!! warning "Do not forget to update IAM policy"
 
       To collect Azure Network Load Balancers, the corresponding IAM policy must be updated.
-      You can download the new policy [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/azure/azure-role-7_2.json).
+      You can download the new policy [here](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/azure/azure-role-7_2.json).
 
 #### Enhanced BGP Community Controls for Optimized Discovery
 
 - Introduced per-device, per-protocol (IPv4/IPv6), and per-VRF BGP community configurations to limit downloaded routes during discovery.
-- This feature prioritizes community-based filtering over global thresholds, ensuring precise data collection while reducing processing time. Ideal for large-scale networks with extensive BGP tables. For more information see [Routing](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/routing.md)
+- This feature prioritizes community-based filtering over global thresholds, ensuring precise data collection while reducing processing time. Ideal for large-scale networks with extensive BGP tables. For more information see [Routing](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/routing.md)
 
 #### Connections between IPsec & VXLAN tunnel endpoints now visible in path-lookup
 
 - For easier identification of where IPsec and VXLAN tunnels start and end, especially when traversing multiple devices, direct links between tunnel endpoints
-are now visible in path lookups. More details can be found in [IPsec & VXLAN tunnel endpoints](../../IP_Fabric_GUI/diagrams/how_to_use_path-lookup.md/#ipsec-vxlan-tunnel-endpoints).
+are now visible in path lookups. More details can be found in [IPsec & VXLAN tunnel endpoints](../../../../IP_Fabric_GUI/diagrams/how_to_use_path-lookup.md/#ipsec-vxlan-tunnel-endpoints).
 
 #### BGP Route Collection Enhancement
 
-We have introduced filtered BGP route collection support, allowing network administrators to explicitly define which networks to collect. This enables focused BGP route analysis while optimizing system resources across **Cisco IOS/IOS-XE**, **IOS-XR**, **NX-OS**, **Juniper JunOS** and **Arista EOS** platforms.
+We have introduced filtered BGP route collection support, allowing network administrators to explicitly define which networks to collect.
+This enables focused BGP route analysis while optimizing system resources across **Cisco IOS/IOS-XE**, **IOS-XR**, **NX-OS**, **Juniper JunOS** and **Arista EOS** platforms.
 
-For detailed information about the new API endpoints and configuration options, see [BGP Route Collection API](../../IP_Fabric_API/Settings/bgp_route_collection.md).
+For detailed information about the new API endpoints and configuration options, see [BGP Route Collection API](../../../../IP_Fabric_API/Settings/bgp_route_collection.md).
 
 ### Improvements
 
@@ -252,7 +247,7 @@ For detailed information about the new API endpoints and configuration options, 
   - `Last Output Value`
 - An additional column  was added to **the Inventory --> Devices** table and is hidden by default:
   - `Credentials Notes`
-- [Global filter](../../IP_Fabric_GUI/global_filter.md) now allows for selecting all possible values of given attribute using the `Select all` option.
+- [Global filter](../../../../IP_Fabric_GUI/global_filter.md) now allows for selecting all possible values of given attribute using the `Select all` option.
 
 #### Advanced Filters
 
@@ -264,7 +259,7 @@ For detailed information about the new API endpoints and configuration options, 
   - Filter data using predefined Attributes, such as `siteName`.
   - Use custom Attributes for more specific filtering.
 
-- For a complete list of properties and supported tables, refer to [Technology Tables -- Device-Based Advanced Filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
+- For a complete list of properties and supported tables, refer to [Technology Tables -- Device-Based Advanced Filters](../../../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
 
 #### Discovery Settings
 
@@ -291,7 +286,7 @@ For detailed information about the new API endpoints and configuration options, 
 
 - Added Silver Peak API key authentication support.
 - Added IPv6 BGP neighbors support for Arista (EOS), Cisco (IOS, IOS-XE, NX-OS), FS (FSOS), PaloAlto (PAN-OS).
-- Added support for IPv6 BGP Route limit - [see documentation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md)
+- Added support for IPv6 BGP Route limit - [see documentation](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md)
   - Arista: EOS
   - Cisco: NX-OS, IOS, IOS-XE, IOS-XR, Viptela
   - Juniper: JunOS
@@ -325,9 +320,9 @@ For detailed information about the new API endpoints and configuration options, 
 
 ### Experimental Features
 
-Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
+Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
 
 #### Configuration Management Optimizations
 
-To accelerate device configuration retrieval, you can try to enable different [Git performance optimizations](../../System_Administration/Command_Line_Interface/Feature_Flags.md#configuration-management-optimizations) for configuration management.  
+To accelerate device configuration retrieval, you can try to enable different [Git performance optimizations](../../../../System_Administration/Command_Line_Interface/Feature_Flags.md#configuration-management-optimizations) for configuration management.  
 
