NIM-21462 Mention performance impact of many loaded snapshots

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -93,15 +93,17 @@ Follow the steps in order. **Do not interrupt the process** once Step 4 (Launch 
 
 ### Performance Limitations
 
-- The XDP Unidirectional Neighbors table may be unable to load.
+- **Snapshot Processing:** Snapshot loading and discovery times may increase as the number of loaded snapshots grows. It is recommended to gradually
+ increase the snapshot load limit in small increments to avoid extended load times.
+- **Intent Verification Rules:** The computation of Intent Verification Rules during snapshot loading or creation may take longer than expected.
+ This process is not yet optimized, but performance improvements will be included in an upcoming patch release.
+- **Table Loading Performance:** Some tables may experience longer loading times when a large number of snapshots is loaded. Please contact customer support if you experience such a case.
 - During snapshot loading, the GUI may become unresponsive, requiring a page refresh.
-- **Computing Intent Verification Rules** during the loading of an existing snapshot or the creation of a new snapshot (as part of pre-discovery calculations)
-may take longer than expected, as this process is not yet optimized. Performance improvements are planned and will be included in an upcoming patch release.
+- The **xDP Unidirectional Neighbors** table may be unable to load.
 
   !!! Hint
 
-      The duration of the computation depends on the number of currently loaded snapshots. To reduce the time spent on Computing Intent Verification Rules,
-      it is recommended to minimize the number of loaded snapshots.
+      To improve performance, particularly when computing Intent Verification Rules, minimize the number of loaded snapshots.
 
 ### Database Migration Issues
 
