NIM-21058 Mention removal of 4k firewall rule limit in 7.3 release note + update 7.3.20 RN and LLRN

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -55,28 +55,41 @@ In version `7.3`, we introduced support for the Cisco NX-OS `show ip route detai
 If you're experiencing extended discovery times (9+ hours), this issue is likely the cause. As a temporary workaround, disable the **Routing table** task for affected devices (SNs or whole NX-OS family) under:
 **Settings → Discovery & Snapshots → Discovery Settings → Disabled Discovery Tasks**.
 
+Processing of `show ip route detail full` commands has improved significantly in version `7.3.20`. You may not experience these issues after the upgrade.
+
+## v7.3.20 (September 15th, 2025; GA)
+
+```
+SHA256 (ipfabric-update-7-3-20+0.tar.zst.sig) = 53a1e4bbe86c5cc1342bc97294cb9f1a50f267fbdccfde87924d598da9191142
+MD5 (ipfabric-update-7-3-20+0.tar.zst.sig) = 59e237c72a0719fca2cd5958fda3a047
+SHA256 (ipfabric-7-3-20+0.qcow2) = 5113f6c86d61ab6cb995f2f02f746697b8c1af94f7f1f7c52d3cffe85ab1429a
+MD5 (ipfabric-7-3-20+0.qcow2) = 51205f748c6ab05b1090090b7e472ce8
+SHA256 (ipfabric-7-3-20+0.vmdk) = 21a5dbfb54e79f1525399f856b98f0b428cec6541c7be074e947dc46f357cf98
+MD5 (ipfabric-7-3-20+0.vmdk) = 5e17aec67b6f58f4a518f92591c6812c
+SHA256 (ipfabric-7-3-20+0.vhdx.zst) = c25125c5072688f460439b1c66b77145cd3045d0e2c7797cf79410fc73e62198
+MD5 (ipfabric-7-3-20+0.vhdx.zst) = 9e5260d64a3c4d4ee905a278ffba00ba
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-20+0.ova) = b72983fd0ae4a2e8d65691bba68dd17f300ab61fd1e2d31d6f565b76170d62f8
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-20+0.ova) = 27a5d4006ad4af714669335c99dcc1a9
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-20+0.ova) = 3f7432d549e8b6af210e1d7aacb3633e301674d37a0ae42499569a13844c6b98
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-20+0.ova) = 7f688b7b6c283162a9844d36f2d8aaaa
+SHA256 (ESXi8.0-ipfabric-7-3-20+0.ova) = 30a1dc26698c1626f793526cd5ab80203d00af78535ac51f5d0339cf72d96113
+MD5 (ESXi8.0-ipfabric-7-3-20+0.ova) = ac7a53c50136655301da90da45842b75
+```
+
+### Improvements
+
+- The previous limitation of 4,000 firewall rules per device during path lookup has been removed. The path lookup engine is now capable of evaluating an unlimited number of firewall rules.
+- Processing of `show ip route detail full` commands has improved significantly.
+- End of life detail table no longer contains duplicate records for the same `PID Serial Number`.
+
+### Fixes
+
 #### Versa Routing Table Missing MPLS Labels
 
-A bug was introduced in version 7.3.18 that affects Versa devices. Their routing tables no longer include MPLS label information, which causes path lookups through these devices to fail.
+A bug was introduced in version 7.3.18 that affects Versa devices. Routing tables no longer included MPLS label information, which caused path lookups through these devices to fail.
 
 ## v7.3.18 (August 27th, 2025; GA)
 
-```
-SHA256 (ipfabric-update-7-3-18+0.tar.zst.sig) = 5050ed0d1caec4f7771f8034c0e76ad7f34d8911909bf33fce2dd6db2e6f48fb
-MD5 (ipfabric-update-7-3-18+0.tar.zst.sig) = 69699b0add719cc3b4f0493016f6c0f6
-SHA256 (ipfabric-7-3-18+0.qcow2) = 58c388e89370e4c4681d49c8f4b876c7e6c8a20303e4c835325dde5d174c3d04
-MD5 (ipfabric-7-3-18+0.qcow2) = a4aff5f1211b0cf89731ff0ecf1654a7
-SHA256 (ipfabric-7-3-18+0.vmdk) = 34466cb9747f3030297a941e7a448480d2c1fb887048bf535fc378311ab34aa4
-MD5 (ipfabric-7-3-18+0.vmdk) = ae92dea4cd8d6c5421a6ecd1565685a9
-SHA256 (ipfabric-7-3-18+0.vhdx.zst) = 076f2cf22b2e64adda518c844a0931d3438f93b2693c2c0c4a4939c8cb2771ab
-MD5 (ipfabric-7-3-18+0.vhdx.zst) = 7cdd7ea749d88813706890f8ee8bf2a3
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-18+0.ova) = 97fb99338e9839817869607f7b4d0fc0bf397accc3373ccfd2cf2f4789408e8e
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-18+0.ova) = bc9cd45263e3f0a75dd3551f78554f4e
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-18+0.ova) = bffabd06b319fcac06fd0081511032707e89a67df3cc63a7de375ae7faafc030
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-18+0.ova) = dcab252cedbda26b2560a57edbe638ab
-SHA256 (ESXi8.0-ipfabric-7-3-18+0.ova) = 8d20f4bbb853f34144842a295bfaebd0958fc6e764f4e3e86b947835afe2dd97
-MD5 (ESXi8.0-ipfabric-7-3-18+0.ova) = eb5f7ce4214f641ca5b1693b82861f0a
-```
 ### Improvements
 
 An enhanced version of the `ipf-checker` was introduced with new performance tests to ensure readiness for the upcoming PostgreSQL database release.
