--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,49 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 599 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 625 fixed issues.
+
+## 7.3.20
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-15077` -- Highest -- AWS TGW - VPC attachment routes refactor (static & propagated)
+- `NIM-21144` -- High -- Cisco ACI - NX-OS routes missing due to negative timestamp
+- `NIM-21292` -- High -- Some Aruba IAP are missing the interfaces
+- `NIM-21304` -- High -- Fortigate FW specific context missing all rules on IPF
+- `NIM-21323` -- Highest -- BGP Advertised Routes task is completely broken on IPF 7.3
+- `NIM-21329` -- High -- show ip route detail vrf <vrf> is truncated on CISCO Nexus9000
+- `NIM-21434` -- Highest -- Unable to display EoL details table
+- `NIM-21441` -- Highest -- Versa routing table missing label - path lookup failing
+- `NIM-21455` -- High -- Fix parsing of L2 VXLAN related properties on Juniper QFX switches
+- `NIM-21457` -- Highest -- Incorrect command to get full vrf routing tables nx-os
+- `NIM-21512` -- Highest -- Cisco missing routing table vrf commands when BGP threshold is disabled
+
+## 7.3.19
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-21027` -- High -- Huawei tasks/deviceConfig/startup ABTaskMapResultError - Saved config consistency not working
+- `NIM-21068` -- High -- Inventory - EoL Milestones - Duplicate entries still seen
+- `NIM-21173` -- Highest -- Cisco ACI - get correct sPcTag for transparent firewall on ingress leaf
+- `NIM-21175` -- High -- Interface original name missing for EXOS devices
+- `NIM-21182` -- High -- ISIS - Huawei parsing issue
+- `NIM-21204` -- High -- Mikrotik LLDP-only neighbors missing from xDP table
+- `NIM-21209` -- Medium -- New version doesnt fix dot1x indicator, shows as unknown - related to NIM-17875
+- `NIM-21290` -- High -- commands/hpe/_arubaIap/portStatusDetail Couldn't validate AP with the error "speed" must be a number
+- `NIM-21298` -- Medium -- Cisco ACI - PBR evaluation is not executed if ACL policy is already applied
+- `NIM-21299` -- Medium -- Cisco ACI - ACL - add destination mac to BD GW tests + add redirect rules to ACL chain to avoid deny packet
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-21058` -- Highest -- E2E Path Lookup - increase the limit for FW rules - currently is set to 4K rules
+- `NIM-21158` -- Medium -- Cisco ACI - evaluate security rules on ingress leaf also for external subnets
 
 ## 7.3.18
 
@@ -18,6 +60,8 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-19673` -- Medium -- Cisco Stack Standby Member Shows Incorrect Serial Number
 - `NIM-19859` -- Highest -- worker@1 heap out of memory during Versa discovery
 - `NIM-20099` -- High -- SyslogWorker removing devices from discovery history
+- `NIM-20506` -- Highest -- Service graph -> ACI always deny
+- `NIM-20532` -- Highest -- Cisco ACI - ServiceGraphs - wrongly not matched rule
 - `NIM-20889` -- High -- First Hop Algorithm form: clicking in Hostname typeahead dropdown does not set the value
 - `NIM-20920` -- Highest -- Updater reaches heap allocation limit while loading snapshot with full BGP tables
 - `NIM-21015` -- High -- BGP Advertised Routes still failing
@@ -273,6 +317,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-19519` -- Medium -- Extension URL returns 500 after removal
 - `NIM-19536` -- Highest -- Worker and syslogworker failure due to "Sorry, the maximum number of sessions are active" message
 - `NIM-19571` -- Medium -- STP task disabled for CIsco IOS / IOS-XE
+- `NIM-21307` -- Medium -- ABMapResultError: Error validating subinterface 'GE8:4087' - Cannot read properties of undefined (reading 'push')
 
 ### Tasks
 
